# TinyLM

./: .gitignore  README.md  build_dataset.py  build_tokenizer.py  modeling_my_qwen2.py  pyproject.toml  test_lm.py  train_lm.py  train_lm_config.yaml
